<resources>
    <string name="app_name">The_heck</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_phone">Phone</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <string-array name="specializations_array">
        <item> -</item>
        <item>Allergist</item>
        <item>Cardiologist</item>
        <item>Dentist</item>
        <item>Dermatologist</item>
        <item>Endocrinologist</item>
        <item>Gastroenterologist</item>
        <item>Gynecologist</item>
        <item>Hematologist</item>
        <item>Neurologist</item>
        <item>Ophthalmologist</item>
        <item>Orthopedist</item>
        <item>Pediatrician</item>
        <item>Periodontist</item>
        <item>Radiologist</item>
        <item>Urologist</item>
    </string-array>
</resources>
